--- a/home.css
+++ b/home.css
@@ -12,6 +12,18 @@
     background-color: rgb(241,243,246);
 }
 
+#screen1{
+    width: 100%;
+    height: 150vh;
+    background-color: white;
+}
+
+#screen3{
+    width: 100%;
+    height: 120vh;
+    background-color: rgb(241,243,246);
+}
+
 .navbar{
     width: 100%;
     height: 8vh;
@@ -520,8 +532,8 @@
     /* border: 1px solid red; */
     position: relative;
     top: 7%;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
-    background-color: white;
+    /* box-shadow: 0 5px 10px rgba(0,0,0,0.2); */
+    /* background-color: white; */
     display: flex;
     justify-content: space-between;
 }
@@ -529,20 +541,21 @@
 .cart-left{
     width: 40%;
     height: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
 }
 
 .cart-left-left{
     width: 20%;
     height: 60%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    background-color: white;
 }
 
 .c-l-l-image{
     width: 100%;
     height: 25%;
-    border: 1px solid red;
+    /* border: 1px solid red;    */
 }
 
 .c-l-l-image img{
@@ -553,14 +566,308 @@
 
 .cart-left-right{
     width: 80%;
-    height: 100%;
-    border: 1px solid red;
+    height: 70%;
+    /* border: 1px solid red; */
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.c-l-r-image{
+    width: 100%;
+    height: 85%;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.c-l-r-image img{
+    width: 90%;
+    height: 90%;
+    /* border: 1px solid red; */
+}
+
+.cartButton{
+    width: 100%;
+    height: 8%;
+    display: flex;
+    justify-content: space-between;
+    /* border: 1px solid red; */
+}
+
+.cartButton button{
+    width: 48%;
+    border: none;
+    outline: none;
+    color: white;
+    font-size: 1em;
+    font-weight: bold;
+    border-radius: 5px;
+    background-color: rgb(255,159,0);
+}
+
+.cartButton button:nth-child(2){
+    background-color: rgb(251,100,27);
 }
 
 .cart-right{
     width: 58%;
     height: 100%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+
+.right-title{
+    font-size: 1.15em;
+    font-weight: 300;
+    margin-left: 2%;
+    padding-top: 2%;
+}
+
+.right-rating{
+    width: 60%;
+    height: 50px;
+    /* border: 1px solid red; */
+    margin-left: 2%;
+    padding-top: 2%;
+    display: flex;
+}
+
+.rating-section{
+    width: 10%;
+    height: 75%;
+    /* border: 1px solid red; */
+    border-radius: 2px;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(56,142,60);
+}
+
+.rating-section p{
+    padding-top: 5%;
+}
+
+.review-count{
+    width: 50%;
+    height: 80%;
+    padding-left: 10px;
+    /* border: 1px solid red; */
+    font-weight: bold;
+    font-size: 0.9em;
+    color: rgb(146,144,135);
+}
+
+.flip-assured-rating{
+    width: 13%;
+    height: 100%;
+}
+
+.flip-assured-rating img{
+    width: 100%;
+    scale: 1.1;
+}
+
+.right-price{
+    margin-left: 2%;
+    padding-top: 2%;
+    display: flex;
+    align-items: center;
+}
+
+.right-price h1{
+    padding-right: 2%;
+}
+
+.right-price p{
+    padding-right: 2%;
+}
+
+.right-price :nth-child(2){
+    color: rgb(146,144,135);
+}
+
+.right-price :nth-child(3){
+    color: rgb(56,142,60);
+}
+
+.right-offers{
+    margin-left: 2%;
+    padding-top: 2%;
+}
+
+.right-offers p{
+    padding-top: 2%;
+    font-size: 0.9em;
+}
+
+.right-offers svg{
+    padding-right: 5px;
+}
+
+.main-cont-cart{
+    width: 100%;
+    height: 100vh;
+    /* border: 1px solid red; */
+    position: relative;
+    /* top: 8%; */
+    display: flex;
+    justify-content: space-around;
+}
+
+.left-content{
+    width: 63%;
+    height: 100%;
+    /* border: 1px solid red; */
+    /* background-color: white; */
+    position: relative;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+}
+
+.lc-delivery{
+    width: 100%;
+    height: 10%;
+    /* border: 1px solid red; */
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.lc-delivery p{
+    margin-left: 2%;
+}
+
+.lc-delivery button{
+    margin-right: 2%;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    color: rgb(40,116,240);
+    width: 8%;
+    height: 40px;
+    background-color: white;
+    border: 1px solid lightgrey;
+}
+
+.lc-cart{
+    width: 100%;
+    height: 89%;
+    /* border: 1px solid red; */
+    background-color: white;
+    overflow-y: scroll;
+}
+
+.inner-cprod{
+    margin: auto;
+    margin-bottom: 2%;
+    width: 95%;
+    height: 30%;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cprod-image{
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid red; */
+}
+
+.cprod-image img{
+    width: 90%;
+    height: 90%;
+    /* border: 1px solid red; */
+}
+
+.cprod-name{
+    width: 50%;
+    height: 50%;
+    /* border: 1px solid red; */
+    padding-top: 1%;
+}
+
+.cprod-name h3{
+    font-weight: 300;
+    font-size: 1.1em;
+}
+
+.cprod-name p{
+    padding-top: 5%;
+    font-size: 0.8em;
+}
+
+.cprod-price{
+    width: 25%;
+    height: 50%;
+    /* border: 1px solid red; */
+    padding-top: 1%;
+    text-align: center;
+    font-size: 1.1em;
+}
+
+.right-content{
+    width: 35%;
+    height: 50%;
+    /* border: 1px solid red; */
+    background-color: white;
+    position: sticky;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+}
+
+.rc-title{
+    width: 100%;
+    height: 20%;
+    /* border: 1px solid red; */
+    border-bottom: 1px solid lightgrey;
+    display: flex;
+    align-items: center;
+    padding-left: 5%;
+    color: rgb(157,157,157);
+}
+
+.rc-bill{
+    width: 90%;
+    height: 70%;
+    margin: auto;
+    /* border: 1px solid red; */
+    border-bottom: 1px solid lightgrey;
+    border-style: dashed;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    display: flex;
+    margin-top: 5%;
+    justify-content: space-between;
+}
+
+.rc-finalAmount{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid red; */
+}
+
+.rc-finalAmount h3{
+    margin-left: 5%;
+}
+
+.rc-finalAmount h2{
+    margin-right: 5%;
 }
 
 
